feat/필터 검색 기능 추가